# SampleGnome

./: .buildconfig  meson.build  org.gnome.Samplegnome.json~
data/: meson.build  org.gnome.Samplegnome.appdata.xml.in  org.gnome.Samplegnome.desktop.in  org.gnome.Samplegnome.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  samplegnome-window.c  samplegnome-window.h  samplegnome-window.ui  samplegnome.gresource.xml
